--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
   <link rel="icon" type="image/svg" href="assets/youtube-icon.svg">
   <title>Full React Tutorial #1 - Introduction</title>
@@ -16,35 +18,41 @@
         <rect y="36" width="54" height="5" rx="8"></rect>
       </svg>
     </a>
-    <a href="/">
-      <img src="assets/youtube-icon.svg" height="30" width="30">
-    </a>
-    <a href="/">
-      YouTube<sup>ES</sup>
-    </a>
-    <input type="search" placeholder="Buscar">
-    <button>
-      <svg width="16" height="16" fill="grey" viewBox="0 0 16 16">
-        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-      </svg>
-    </button>
-    <a href="/">
-      <svg  width="18" height="18" fill="grey" viewBox="0 0 16 16">
-        <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
-        <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
-      </svg>
-    </a>
-    <a href="/">
-      <img src="assets/video-plus.svg" height="25" width="25">
-    </a><a href="/">
-      <img src="assets/dots-grid.svg" height="25" width="25">
-    </a>
-    </a><a href="/">
-      <img src="assets/bell.svg" height="25" width="25">
-    </a>
-    </a><a href="/">
-      <span>T</span>
-    </a>
+    <div>
+      <a href="/" title="Página de inicio de Youtube">
+        <img src="assets/youtube-icon.svg" height="30" width="30">
+      </a>
+      <a href="/">
+        <span class="logo">YouTube</span><sup>ES</sup>
+      </a>
+    </div>
+    <div>
+      <input type="search" placeholder="Buscar">
+      <button>
+        <svg width="16" height="16" fill="grey" viewBox="0 0 16 16">
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </svg>
+      </button>
+      <a href="/">
+        <svg  width="18" height="18" fill="grey" viewBox="0 0 16 16">
+          <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
+          <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
+        </svg>
+      </a>
+      <a href="/">
+    </div>
+    <div>
+        <img src="assets/video-plus.svg" height="25" width="25">
+      </a><a href="/">
+        <img src="assets/dots-grid.svg" height="25" width="25">
+      </a>
+      </a><a href="/">
+        <img src="assets/bell.svg" height="25" width="25">
+      </a>
+      </a><a href="/">
+        <span>T</span>
+      </a>
+    </div>
   </header>
   <main>
     <section>
