añade estilos topbar

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
   <header class="topbar">
-    <a href="/">
+    <a class="hamburger" href="/">
       <svg viewBox="0 0 100 80" width="30" height="30">
-        <rect width="54" height="5" rx="8"></rect>
-        <rect y="18" width="54" height="5" rx="8"></rect>
-        <rect y="36" width="54" height="5" rx="8"></rect>
+        <rect width="58" height="5" rx="5"></rect>
+        <rect y="16" width="58" height="5" rx="5"></rect>
+        <rect y="32" width="58" height="5" rx="5"></rect>
       </svg>
     </a>
-    <div>
-      <a href="/" title="Página de inicio de Youtube">
+    <div class="logo">
+      <a class="icon" href="/" title="Página de inicio de Youtube">
         <img src="assets/youtube-icon.svg" height="30" width="30">
       </a>
-      <a href="/">
-        <span class="logo">YouTube</span><sup>ES</sup>
+      <a class="logo" href="/">
+        <span class="text-logo">YouTube</span><sup> ES</sup>
       </a>
     </div>
     <div>
@@ -39,19 +39,22 @@
           <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
         </svg>
       </a>
-      <a href="/">
     </div>
-    <div>
+    <div class="side-buttons">
+      <a href="/">
         <img src="assets/video-plus.svg" height="25" width="25">
-      </a><a href="/">
+      </a>
+      <a href="/">
         <img src="assets/dots-grid.svg" height="25" width="25">
       </a>
-      </a><a href="/">
+      </a>
+      <a href="/">
         <img src="assets/bell.svg" height="25" width="25">
       </a>
-      </a><a href="/">
-        <span>T</span>
       </a>
+      <div class="user-avatar">
+        <a class="user-avatar-text" href="/">T</a>
+      </div>
     </div>
   </header>
   <main>
