--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header class="topbar">
-    <a class="hamburger" href="/">
+    <a class="hamburger" href="/#">
       <svg viewBox="0 0 100 80" width="30" height="30">
         <rect width="58" height="5" rx="5"></rect>
         <rect y="16" width="58" height="5" rx="5"></rect>
@@ -19,21 +19,21 @@
       </svg>
     </a>
     <div class="logo">
-      <a class="icon" href="/" title="Página de inicio de Youtube">
+      <a class="icon" href="/#" title="Página de inicio de Youtube">
         <img src="assets/youtube-icon.svg" height="30" width="30">
       </a>
-      <a class="logo" href="/">
+      <a class="logo" href="/#">
         <span class="text-logo">YouTube</span><sup> ES</sup>
       </a>
     </div>
-    <div>
-      <input type="search" placeholder="Buscar">
-      <button>
-        <svg width="16" height="16" fill="grey" viewBox="0 0 16 16">
+    <div class="search-input">
+      <input class="search-input-field" type="search" placeholder="Buscar">
+      <button class="search-input-button">
+        <svg width="12" height="12" fill="grey" viewBox="0 0 16 16">
           <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
         </svg>
       </button>
-      <a href="/">
+      <a class="search-input-mic" href="/#">
         <svg  width="18" height="18" fill="grey" viewBox="0 0 16 16">
           <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0V3z"/>
           <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5z"/>
@@ -41,19 +41,17 @@
       </a>
     </div>
     <div class="side-buttons">
-      <a href="/">
+      <a href="/#">
         <img src="assets/video-plus.svg" height="25" width="25">
       </a>
-      <a href="/">
+      <a href="/#">
         <img src="assets/dots-grid.svg" height="25" width="25">
       </a>
-      </a>
-      <a href="/">
+      <a href="/#">
         <img src="assets/bell.svg" height="25" width="25">
       </a>
-      </a>
       <div class="user-avatar">
-        <a class="user-avatar-text" href="/">T</a>
+        <a class="user-avatar-text" href="/#">T</a>
       </div>
     </div>
   </header>
