primeros estilos main

--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
     </div>
   </header>
   <main>
-    <section>
-      <iframe width="1000" height="600" src="https://www.youtube.com/embed/j942wKiXFu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section class="video-frame">
+      <iframe width="1100" height="600" src="https://www.youtube.com/embed/j942wKiXFu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
-    <section>
+    <section class="video-info">
+      <h4>
+        Full React Tutorial #1 - Introduction
+      </h4>
+    </section>
+    <section class=>
       The Net Ninja channel
     </section>
     <section>
