--- a/index.html
+++ b/index.html
@@ -56,23 +56,82 @@
     </div>
   </header>
   <main>
-    <section class="video-frame">
-      <iframe width="1100" height="600" src="https://www.youtube.com/embed/j942wKiXFu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </section>
-    <section class="video-info">
-      <h4>
-        Full React Tutorial #1 - Introduction
-      </h4>
-    </section>
-    <section class=>
-      The Net Ninja channel
-    </section>
-    <section>
-      Comments
-    </section>
-    <section>
-      Suggested videos
-    </section>
+    <div class="left-column">
+      <section >
+        <iframe class="video-frame" src="https://www.youtube.com/embed/j942wKiXFu8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
+      <section class="video-info">
+        <p>
+          Full React Tutorial #1 - Introduction
+        </p>
+        <div class="video-data">
+          <p>
+            169.427 visualizaciones • 21 dic 2020
+          </p>
+          <div class="video-buttons">
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+              </svg>
+              <span>
+                5245
+              </span>
+            </button>
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+              </svg>
+              <span>
+                8
+              </span>
+            </button>
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M21,12L14,5V9C7,10 4,15 3,20C5.5,16.5 9,14.9 14,14.9V19L21,12Z" />
+              </svg>
+              <span>
+                COMPARTIR
+              </span>
+            </button>
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M2,16H10V14H2M18,14V10H16V14H12V16H16V20H18V16H22V14M14,6H2V8H14M14,10H2V12H14V10Z" />
+              </svg>
+              <span>
+                AÑADIR
+              </span>
+            </button>
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M16,12A2,2 0 0,1 18,10A2,2 0 0,1 20,12A2,2 0 0,1 18,14A2,2 0 0,1 16,12M10,12A2,2 0 0,1 12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12M4,12A2,2 0 0,1 6,10A2,2 0 0,1 8,12A2,2 0 0,1 6,14A2,2 0 0,1 4,12Z" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="channel-content">
+        <div class="top-channel-content">
+          <div class="ninja">
+            <img src="https://yt3.ggpht.com/ytc/AAUvwni-Wm0ZBDYJYFwySP2esxgc8s9mKiwmI3yJrmjlHQ=s48-c-k-c0x00ffffff-no-rj">
+          </div>
+          <div class="subscribe-buttons">
+            <button>
+              UNIRME
+            </button>
+            <button>
+              SUSCRIBIRME
+            </button>
+          </div>
+        </div>
+        The Net Ninja channel
+      </section>
+      <section>
+        Comments
+      </section>
+      <section>
+        Suggested videos
+      </section>
+    </div>
   </main>
 </body>
 </html>
