añade primeros estilos comments

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" type="image/svg" href="assets/youtube-icon.svg">
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
   <title>Full React Tutorial #1 - Introduction</title>
 </head>
 <body>
@@ -121,7 +121,15 @@
         </div>
       </section>
       <section>
-        Comments
+        <div class="comments-header">
+          <div class="order-comments">
+            <p>378 comentarios</p>
+            <button>
+              <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z" />
+              </svg>ORDENAR POR</button>
+          </div>
+        </div>
       </section>
       <section>
         Suggested videos
