--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="video-data">
           <p>169.427 visualizaciones • 21 dic 2020</p>
           <div class="video-buttons">
-            <button>
+            <button title="Me gusta este vídeo">
               <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                 <path fill="currentColor" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
               </svg>
               <span>5245</span>
             </button>
-            <button>
+            <button title="No me gusta este vídeo">
               <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                 <path fill="currentColor" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
               </svg>
@@ -128,6 +128,145 @@
               <svg style="width:24px;height:24px" viewBox="0 0 24 24">
                 <path fill="currentColor" d="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z" />
               </svg>ORDENAR POR</button>
+          </div>
+          <div class="comment-form">
+            <div class="user-avatar user-avatar-large">
+              <a class="user-avatar-text" href="/#">T</a>
+            </div>
+            <p class="comment-field">Añade un comentario público...</p>
+          </div>
+        </div>
+        <div class="comment">
+          <a href="/#">
+            <img class="avatar-image" src="https://yt3.ggpht.com/ytc/AAUvwnhSGoPsJfWqhE7BOiXJILN2Fv1-GYK-h-1mRxrlzA=s48-c-k-c0x00ffffff-no-rj">
+          </a>
+          <div class="comment-content">
+            <a class="user-name">Luís Galete<span class="comment-date">hace 5 meses</span></a>
+            <p class="comment-text">I've always seen comments like "Just what I needed", but never thought it would happen to me. Now I believe it, Shaun is a real ninja!</p>
+            <div class="comment-feedback">
+              <a href="/#" title="Me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+                </svg>
+              </a>
+              <span class="likes-counter">230</span>
+              <a href="/#" title="No me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+                </svg>
+              </a>
+              <button class="reply-btn">RESPONDER</button>
+            </div>
+            <div class="replys">
+              <svg style="width:18px;height:18px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M7,10L12,15L17,10H7Z" />
+              </svg>
+              <p>Ver 4 respuestas</p>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <a href="/#">
+            <img class="avatar-image" src="https://yt3.ggpht.com/ytc/AAUvwnjRFzZ_37barNojsc_HtHcj4fQqPErs3I2v7w=s48-c-k-c0x00ffffff-no-rj">
+          </a>
+          <div class="comment-content">
+            <a class="user-name">Brother Caleb<span class="comment-date">hace 5 meses</span></a>
+            <p class="comment-text">I literally was going through the previous react tutorial last week and this series is here ... perfect 🤩</p>
+            <div class="comment-feedback">
+              <a href="/#" title="Me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+                </svg>
+              </a>
+              <span class="likes-counter">3</span>
+              <a href="/#" title="No me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+                </svg>
+              </a>
+              <button class="reply-btn">RESPONDER</button>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <a href="/#">
+            <img class="avatar-image" src="https://yt3.ggpht.com/ytc/AAUvwni6b6jIPLqnRurV9mjBywO2EHQoXPd-fP3mWJrklQ=s48-c-k-c0x00ffffff-no-rj">
+          </a>
+          <div class="comment-content">
+            <a class="user-name">Aria Goswami<span class="comment-date">hace 5 meses</span></a>
+            <p class="comment-text">I learned Vue from your tutorial last year, then I'm catching up with the Vue3 tutorial of yours currently, and now when I am seeing a brand new React tutorial, I'm nothing but all smiles and full of admiration for you!</p>
+            <div class="comment-feedback">
+              <a href="/#" title="Me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+                </svg>
+              </a>
+              <span class="likes-counter">1</span>
+              <a href="/#" title="No me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+                </svg>
+              </a>
+              <button class="reply-btn">RESPONDER</button>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <a href="/#">
+            <img class="avatar-image" src="https://yt3.ggpht.com/ytc/AAUvwnhu44jfhcc_CSXGWu4g4FiSbnAg2qNgSZbwrW3o=s48-c-k-c0x00ffffff-no-rj">
+          </a>
+          <div class="comment-content">
+            <a class="user-name">Wahab Shaikh<span class="comment-date">hace 5 meses</span></a>
+            <p class="comment-text">I started learning React with your older tutorial a few months ago, and I’m sure I couldn’t have grasped so much about the technology had I started elsewhere! Love your teaching style ♥️</p>
+            <div class="comment-feedback">
+              <a href="/#" title="Me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+                </svg>
+              </a>
+              <span class="likes-counter"></span>
+              <a href="/#" title="No me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+                </svg>
+              </a>
+              <button class="reply-btn">RESPONDER</button>
+            </div>
+            <div class="replys">
+              <svg style="width:18px;height:18px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M7,10L12,15L17,10H7Z" />
+              </svg>
+              <p>Ver respuesta de The Net Ninja</p>
+            </div>
+          </div>
+        </div>
+        <div class="comment">
+          <a href="/#">
+            <img class="avatar-image" src="https://yt3.ggpht.com/ytc/AAUvwniT-r9M7etm99RqQAUs5kstUK6ajrMzrnLRoj_LWA=s48-c-k-c0x00ffffff-no-rj">
+          </a>
+          <div class="comment-content">
+            <a class="user-name">Sourahb Mahato<span class="comment-date">hace 5 meses</span></a>
+            <p class="comment-text">Thanks for saving my ass. I just needed a modern react playlist. You're a gem to the community. 💖</p>
+            <div class="comment-feedback">
+              <a href="/#" title="Me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M23,10C23,8.89 22.1,8 21,8H14.68L15.64,3.43C15.66,3.33 15.67,3.22 15.67,3.11C15.67,2.7 15.5,2.32 15.23,2.05L14.17,1L7.59,7.58C7.22,7.95 7,8.45 7,9V19A2,2 0 0,0 9,21H18C18.83,21 19.54,20.5 19.84,19.78L22.86,12.73C22.95,12.5 23,12.26 23,12V10M1,21H5V9H1V21Z" />
+                </svg>
+              </a>
+              <span class="likes-counter">51</span>
+              <a href="/#" title="No me gusta">
+                <svg style="width:17px;height:17px" viewBox="0 0 24 24">
+                  <path fill="gray" d="M19,15H23V3H19M15,3H6C5.17,3 4.46,3.5 4.16,4.22L1.14,11.27C1.05,11.5 1,11.74 1,12V14A2,2 0 0,0 3,16H9.31L8.36,20.57C8.34,20.67 8.33,20.77 8.33,20.88C8.33,21.3 8.5,21.67 8.77,21.94L9.83,23L16.41,16.41C16.78,16.05 17,15.55 17,15V5C17,3.89 16.1,3 15,3Z" />
+                </svg>
+              </a>
+              <button class="reply-btn">RESPONDER</button>
+            </div>
+            <div class="replys">
+              <svg style="width:18px;height:18px" viewBox="0 0 24 24">
+                <path fill="currentColor" d="M7,10L12,15L17,10H7Z" />
+              </svg>
+              <p>Ver 3 respuestas de The Net Ninja y otros usuarios</p>
+            </div>
           </div>
         </div>
       </section>
